[metadata]
name = my_plotting_utils
version = attr: my_plotting_utils.VERSION
description = slap that like button
author = Niklas Hahn
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    my_plotting_utils
install_requires =
    matplotlib
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
all =
    tox
    %(test)s
    %(doc)s


test = 
    isort
    black
    mypy
    pylint
    pytest
    pytest-cov
    coverage[toml]
    pydocstyle
    types-docutils
    types-setuptools

doc =
    sphinx
    sphinx_rtd_theme
